# jobacker

./: .gitignore  AGENTS.md  README.md  ROADMAP-PRODUCTION-GRADE.md  insforge.toml  pyproject.toml  skills-lock.json
.agents/skills/remember/: SKILL.md
backend/: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
backend/app/: __init__.py  config.py  main.py
backend/app/dependencies/: __init__.py
backend/app/models/: __init__.py
backend/app/routers/: __init__.py
backend/app/schemas/: __init__.py
backend/app/utils/: __init__.py  security.py
backend/src/: server.ts
backend/src/agent/: cover-letter.ts  pdf-generator.ts  resume-tailor.ts  scorer.ts
backend/src/lib/: insforge.ts  utils.ts
backend/src/middleware/: requireAuth.ts
backend/src/routes/: agent.ts  applications.ts  auth.ts  dashboard.ts  profile.ts
backend/src/types/: index.ts
backend/tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_jobs.py
context/: architecture.md  build-plan.md  code-standards.md  library-docs.md  progress-tracker.md  project-overview.md  ui-registry.md  ui-rules.md  ui-tokens.md
context/designs/: DESIGN.md  jobacker-landing.html
demo-video/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
demo-video/src/: DemoVideo.tsx  Root.tsx
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/hooks/: useApplications.ts  useAuth.ts  useDashboard.ts  useProfile.ts
(+39 files in other folders)
